<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <com.lumyjuwon.richwysiwygeditor.RichEditor.EditableWebView
        android:id="@+id/web_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/layout_toolbar"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:autoLink="web|email"
        android:background="@color/white"
        android:gravity="start"
        android:textCursorDrawable="@drawable/edit_cursor" />

    <ProgressBar
        android:id="@+id/progress_bar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@android:style/Widget.DeviceDefault.Light.ProgressBar.Large"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:layout_centerInParent="true"
        android:indeterminate="true" />

    <RelativeLayout
        android:id="@+id/layout_toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="3dp"
        android:layout_marginStart="3dp"
        android:layout_marginRight="3dp"
        android:layout_marginEnd="3dp"
        android:layout_marginBottom="2dp"
        android:layout_alignParentBottom="true">

        <HorizontalScrollView
            android:id="@+id/scrollview_actions"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_toLeftOf="@id/button_switch_toolbar"
            android:layout_toStartOf="@id/button_switch_toolbar"
            android:scrollbars="none">
    <!--        android:background="@drawable/bottom_border_white"-->
    <!--        android:background="@color/toolbar_background"-->

            <LinearLayout
                android:id="@+id/toolbar_actions"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:background="@color/white"
                android:orientation="horizontal">

                <com.gee12.htmlwysiwygeditor.ActionButton
                    android:id="@+id/button_text_size"
                    style="@style/action_button"
                    android:contentDescription="@string/text_size"
                    android:src="@drawable/ic_text_size_black" />

    <!--            <com.gee12.htmlwysiwygeditor.ActionButton-->
    <!--                android:id="@+id/button_text_headering"-->
    <!--                style="@style/ActionButton"-->
    <!--                android:src="@drawable/ic_headering_black" />-->

                <com.gee12.htmlwysiwygeditor.ActionButton
                    android:id="@+id/button_text_bold"
                    style="@style/action_button"
                    android:contentDescription="@string/text_bold"
                    android:src="@drawable/ic_bold_black" />

                <com.gee12.htmlwysiwygeditor.ActionButton
                    android:id="@+id/button_text_italic"
                    style="@style/action_button"
                    android:contentDescription="@string/text_italic"
                    android:src="@drawable/ic_italic" />

                <com.gee12.htmlwysiwygeditor.ActionButton
                    android:id="@+id/button_text_underLine"
                    style="@style/action_button"
                    android:contentDescription="@string/text_align"
                    android:src="@drawable/ic_underline_black" />

                <com.gee12.htmlwysiwygeditor.ActionButton
                    android:id="@+id/button_text_strike"
                    style="@style/action_button"
                    android:contentDescription="@string/text_strike"
                    android:src="@drawable/ic_strikethrough" />

                <com.gee12.htmlwysiwygeditor.ActionButton
                    android:id="@+id/button_text_color"
                    style="@style/action_button"
                    android:contentDescription="@string/text_color"
                    android:src="@drawable/ic_text_color_black" />

                <com.gee12.htmlwysiwygeditor.ActionButton
                    android:id="@+id/button_background_color"
                    style="@style/action_button"
                    android:contentDescription="@string/text_color"
                    android:src="@drawable/ic_background_color_black" />

                <com.gee12.htmlwysiwygeditor.ActionButton
                    android:id="@+id/button_code"
                    style="@style/action_button"
                    android:contentDescription="@string/code"
                    android:src="@drawable/ic_code" />

                <com.gee12.htmlwysiwygeditor.ActionButton
                    android:id="@+id/button_quote"
                    style="@style/action_button"
                    android:contentDescription="@string/quotes"
                    android:src="@drawable/ic_quote" />

                <View style="@style/separ"/>

                <com.gee12.htmlwysiwygeditor.ActionButton
                    android:id="@+id/button_text_align"
                    style="@style/action_button"
                    android:contentDescription="@string/text_align"
                    android:src="@drawable/ic_align_left_black" />

                <com.gee12.htmlwysiwygeditor.ActionButton
                    android:id="@+id/button_unordered_list"
                    style="@style/action_button"
                    android:contentDescription="@string/bulled_list"
                    android:src="@drawable/ic_bullet_list" />

                <com.gee12.htmlwysiwygeditor.ActionButton
                    android:id="@+id/button_ordered_list"
                    style="@style/action_button"
                    android:contentDescription="@string/number_list"
                    android:src="@drawable/ic_numbered_list" />

                <com.gee12.htmlwysiwygeditor.ActionButton
                    android:id="@+id/button_indent_inc"
                    style="@style/action_button"
                    android:contentDescription="@string/indent_inc"
                    android:src="@drawable/ic_indent_inc" />

                <com.gee12.htmlwysiwygeditor.ActionButton
                    android:id="@+id/button_indent_dec"
                    style="@style/action_button"
                    android:contentDescription="@string/indent_dec"
                    android:src="@drawable/ic_indent_dec" />

                <com.gee12.htmlwysiwygeditor.ActionButton
                    android:id="@+id/button_remove_format"
                    style="@style/action_button"
                    android:contentDescription="@string/clear_format"
                    android:src="@drawable/ic_clear_format"/>

                <View style="@style/separ"/>

                <com.gee12.htmlwysiwygeditor.ActionButton
                    android:id="@+id/button_insert_link"
                    style="@style/action_button"
                    android:contentDescription="@string/insert_link"
                    android:src="@drawable/ic_link"/>

    <!--            <com.gee12.htmlwysiwygeditor.ActionButton-->
    <!--                android:id="@+id/button_remove_link"-->
    <!--                style="@style/ActionButton"-->
    <!--                android:contentDescription="@string/remove_link"-->
    <!--                android:src="@drawable/ic_remove_link_black" />-->

                <com.gee12.htmlwysiwygeditor.ActionButton
                    android:id="@+id/button_insert_line"
                    style="@style/action_button"
                    android:contentDescription="@string/insert_line"
                    android:src="@drawable/ic_line_black" />

                <com.gee12.htmlwysiwygeditor.ActionButton
                    android:id="@+id/button_insert_image"
                    style="@style/action_button"
                    android:contentDescription="@string/insert_image"
                    android:src="@drawable/ic_image" />

                <com.gee12.htmlwysiwygeditor.ActionButton
                    android:id="@+id/button_insert_video"
                    style="@style/action_button"
                    android:contentDescription="@string/insert_video"
                    android:src="@drawable/ic_video" />

                <com.gee12.htmlwysiwygeditor.ActionButton
                    android:id="@+id/button_insert_table"
                    style="@style/action_button"
                    android:contentDescription="@string/insert_table"
                    android:src="@drawable/ic_table" />

                <com.gee12.htmlwysiwygeditor.ActionButton
                    android:id="@+id/button_insert_formula"
                    style="@style/action_button"
                    android:contentDescription="@string/insert_formula"
                    android:src="@drawable/ic_formula" />

            </LinearLayout>

        </HorizontalScrollView>

        <HorizontalScrollView
            android:id="@+id/scrollview_clipboard"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toLeftOf="@id/button_switch_toolbar"
            android:layout_toStartOf="@id/button_switch_toolbar"
            android:scrollbars="none"
            android:visibility="gone">

            <LinearLayout
                android:id="@+id/toolbar_clipboard"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:background="@color/white"
                android:orientation="horizontal">

                <com.gee12.htmlwysiwygeditor.ActionButton
                    android:id="@+id/button_undo"
                    style="@style/action_button"
                    android:contentDescription="@string/undo"
                    android:src="@drawable/ic_undo" />

                <com.gee12.htmlwysiwygeditor.ActionButton
                    android:id="@+id/button_redo"
                    style="@style/action_button"
                    android:contentDescription="@string/redo"
                    android:src="@drawable/ic_redo" />

                <View style="@style/separ"/>

                <com.gee12.htmlwysiwygeditor.ActionButton
                    android:id="@+id/button_up"
                    style="@style/action_button"
                    android:layout_gravity="center_horizontal"
                    android:visibility="gone"
                    android:src="@drawable/ic_arrow_up" />

                <com.gee12.htmlwysiwygeditor.ActionButton
                    android:id="@+id/button_left"
                    style="@style/action_button"
                    android:src="@drawable/ic_arrow_left" />

                <com.gee12.htmlwysiwygeditor.ActionButton
                    android:id="@+id/button_right"
                    style="@style/action_button"
                    android:src="@drawable/ic_arrow_right" />

                <com.gee12.htmlwysiwygeditor.ActionButton
                    android:id="@+id/button_down"
                    style="@style/action_button"
                    android:layout_gravity="center_horizontal"
                    android:visibility="gone"
                    android:src="@drawable/ic_arrow_down" />

                <com.gee12.htmlwysiwygeditor.ActionButton
                    android:id="@+id/button_selection_mode"
                    style="@style/action_button"
                    android:contentDescription="@string/selection_mode"
                    android:src="@drawable/ic_selection_mode" />

                <com.gee12.htmlwysiwygeditor.ActionButton
                    android:id="@+id/button_select_word"
                    style="@style/action_button"
                    android:contentDescription="@string/select_word"
                    android:src="@drawable/ic_select_word" />

                <com.gee12.htmlwysiwygeditor.ActionButton
                    android:id="@+id/button_select_all"
                    style="@style/action_button"
                    android:contentDescription="@string/select_all"
                    android:src="@drawable/ic_select_all" />

                <View style="@style/separ"/>

                <com.gee12.htmlwysiwygeditor.ActionButton
                    android:id="@+id/button_copy"
                    style="@style/action_button"
                    android:contentDescription="@string/copy"
                    android:src="@drawable/ic_copy" />

                <com.gee12.htmlwysiwygeditor.ActionButton
                    android:id="@+id/button_cut"
                    style="@style/action_button"
                    android:contentDescription="@string/cut"
                    android:src="@drawable/ic_cut" />

                <com.gee12.htmlwysiwygeditor.ActionButton
                    android:id="@+id/button_paste"
                    style="@style/action_button"
                    android:contentDescription="@string/paste"
                    android:src="@drawable/ic_paste" />

                <com.gee12.htmlwysiwygeditor.ActionButton
                    android:id="@+id/button_paste_text"
                    style="@style/action_button"
                    android:contentDescription="@string/paste_text"
                    android:src="@drawable/ic_paste_text" />

                <View style="@style/separ"/>

                <com.gee12.htmlwysiwygeditor.ActionButton
                    android:id="@+id/button_forward_del"
                    style="@style/action_button"
                    android:contentDescription="@string/forward_delete"
                    android:src="@drawable/ic_forward_delete" />

            </LinearLayout>

        </HorizontalScrollView>

        <com.gee12.htmlwysiwygeditor.ActionButton
            android:id="@+id/button_switch_toolbar"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:layout_marginLeft="3dp"
            android:layout_marginStart="3dp"
            style="@style/action_button"
            android:contentDescription="@string/switch_toolbars"
            android:src="@drawable/ic_switch" />

    </RelativeLayout>

    <!--    <com.google.android.material.floatingactionbutton.FloatingActionButton-->
<!--        android:id="@+id/button_scroll_top"-->
<!--        android:layout_alignParentTop="true"-->
<!--        android:layout_alignParentBottom="false"-->
<!--        android:src="@drawable/ic_arrow_up"-->
<!--        app:backgroundTint="@color/fab"-->
<!--        app:fabSize="mini"-->
<!--        android:visibility="gone"-->
<!--        style="@style/fab"/>-->

<!--    <com.google.android.material.floatingactionbutton.FloatingActionButton-->
<!--        android:id="@+id/button_scroll_down"-->
<!--        android:layout_alignParentTop="false"-->
<!--        android:layout_alignParentBottom="true"-->
<!--        android:src="@drawable/ic_arrow_down"-->
<!--        app:backgroundTint="@color/fab"-->
<!--        app:fabSize="mini"-->
<!--        android:visibility="gone"-->
<!--        style="@style/fab"/>-->

</RelativeLayout>