<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/custom_dialog_layout_design_user_input"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp">

    <TextView
        android:text="@string/width_points"
        style="@style/label" />

    <EditText
        android:id="@+id/edit_text_width"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="numberDecimal" >

        <requestFocus/>

    </EditText>

    <TextView
        android:text="@string/height_points"
        style="@style/label" />

    <EditText
        android:id="@+id/edit_text_height"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="numberDecimal" />

    <CheckBox
        android:id="@+id/check_box_similar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="5dp"
        android:text="@string/set_similar_image_params" />

</LinearLayout>